seek bar bug fixed and media controller in lock screen added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="LOADING">Loading...</string>
     <string name="floating_widget_label">Label widget</string>
     <string name="lorem_ipsum">lorem ipsum</string>
+    <string name="aptxt15">asdfsdafsdf</string>
 </resources>
